--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "rxjs": "^6.5.3"
   },
   "devDependencies": {},
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ],
   "scripts": {
     "start": "parcel index.html"
   },
