--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "parcel-bundler": "^1.12.3",
     "rxjs": "^6.5.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^4.2.2"
+  },
   "browserslist": [
     "last 3 and_chr versions",
     "last 3 chrome versions",
